--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1F1430" />
+    <title>tinu.be - Encutador de Url</title>
     <meta
       name="description"
-      content="tinu.be - encurtador de url"
+      content="Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser."
     />
-    <title>tinu.be</title>
+    <meta property="og:title" content="tinu.be - Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
