--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>tinu.be - Encutador de Url</title>
     <meta
       name="description"
-      content="Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser."
+      content="Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser. tinu.be é um serviço totalmente gratuito, aproveite!"
     />
     <meta property="og:title" content="tinu.be - Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser." />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
