--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1F1430" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/touch-icon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/touch-icon-76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/touch-icon-120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/touch-icon-152.png">
+
     <title>tinu.be - Encutador de Url</title>
     <meta
       name="description"
       content="Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser. tinu.be é um serviço totalmente gratuito, aproveite!"
     />
+
     <meta property="og:title" content="tinu.be - Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser." />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
   </head>
