--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1F1430" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/touch-icon.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/touch-icon-76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/touch-icon-120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/touch-icon-152.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/touch-icon.jpg">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/touch-icon-76px.jpg">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/touch-icon-120px.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/touch-icon-152px.jpg">
 
     <title>tinu.be - Encutador de Url</title>
     <meta
