--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/touch-icon-120px.jpg">
     <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/touch-icon-152px.jpg">
 
-    <title>tinu.be - Encutador de Url</title>
+    <title>tinu.be - Encurtador de Url</title>
     <meta
       name="description"
       content="Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser. tinu.be é um serviço totalmente gratuito, aproveite!"
