Update styles and remove 'beta' label

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/touch-icon-120px.jpg">
     <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/touch-icon-152px.jpg">
 
+    <link rel="canonical" href="https://tinu.be">
+
     <title>tinu.be - Encurtador de Url</title>
     <meta
       name="description"
