Update meta tags copy

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
 
     <link rel="canonical" href="https://tinu.be">
 
-    <title>tinu.be - Encurtador de Url</title>
+    <title>tinu.be - Encurtador de Url e gerador de QR Code</title>
     <meta
       name="description"
-      content="Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser. tinu.be é um serviço totalmente gratuito, aproveite!"
+      content="Encurtador de url e gerador de QR code. Compartilhe facilmente em qualquer lugar e com quem quiser. tinu.be é um serviço totalmente gratuito, aproveite!"
     />
 
-    <meta property="og:title" content="tinu.be - Encurte links e compartilhe facilmente em qualquer lugar e com quem quiser." />
+    <meta property="og:title" content="tinu.be - Encurtador de url e gerador de QR code. Compartilhe facilmente em qualquer lugar e com quem quiser." />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
   </head>
   <body>
